# walpanel

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.fa.md  README.md  docker-compose.yml  entrypoint.sh  install.sh  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: buld.yml  docker-release.yml
app/: alembic.ini  main.py  middleware.py
app/admin_services/: api.py  task.py
app/auth/: auth_controller.py
app/bot/: config.py  main.py  utils.py
app/bot/db/: query.py
app/bot/handlers/: __init__.py  callback_handler.py  commands.py  keyboard_handler.py  main_admin_callback_handler.py
app/bot/keyboards/: keyboards.py  main_admin_keyboards.py
app/bot/message_handlers/: __init__.py  main_admin_message_handlers.py
app/bot/messages/: messages.py
app/db/: engine.py  models.py
app/gateways/: extopay_api.py
app/log/: logger_config.py
app/oprations/: admin.py  get_ads.py  panel.py  payment_settings.py  purchase_plan.py  server_info.py  utility.py
app/routers/: __init__.py  extopay_payment.py
app/schema/: _input.py  output.py
app/templates/: admins.html  dashboard.html  login.html  panels.html  receipts.html  settings.html
backend/: app.py
backend/api/: __init__.py
backend/auth/: auth.py
backend/db/: crud.py  model.py
backend/schema/: _input.py  output.py
backend/services/: __init__.py  limit_handler.py  task_handler.py
backend/utils/: __init__.py  ads.py  system.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
media/: ads.json
(+68 files in other folders)
